--- a/webapp/review.html
+++ b/webapp/review.html
@@ -6,12 +6,13 @@
     <script src="js/lib/angular/angular.js"></script>
     <script src="js/loginController.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/reservationsController.js"></script>
     <script src="js/lib/angular-cookies/angular-cookies.js"></script>
     <script src="js/lib/angular-route/angular-route.js"></script>
     <title>Review</title>
 </head>
-<body>
-    <header>
+<body ng-controller="reservationsController as rez">
+    <header ng-init="rez.init()">
         <nav>
              <ol>
                 <li><p><a href="index.html">Super salon usługowy </a></p></li>
@@ -27,18 +28,18 @@
             <div style="clear: both"> </div>
         </nav>
     </header>
+    <center><h1 class="errorText" style="color: red; font-size: 1.8rem">{{rez.errormsg}}</h1></center>
     <main class="makeOpinion">
-        <span>Data : getDate()</span>
-        <span>Pracownik : getPracownik() </span>
-        <span>Usługa : getService()</span>
-        <span>Opinia :<input type="number" max="10" min="1"></span>
+        <span>Pracownik : {{rez.review.employeeFirstName + ' ' + rez.review.employeeLastName}} </span>
+        <span>Usługa : {{rez.review.service.replace('%', ' ')}}</span>
+        <span>Tytuł : <input ng-model="rez.review.title" type="text" id="reviewTitle" required style="font-weight: bold"></span>
         <span>Opis opinii : </span>
-        <textarea name="opinionText" cols="35" rows="2"></textarea>
+        <textarea name="opinionText" cols="35" rows="2" placeholder="Wpisz swoją opinię" style="font-weight: bold" ng-model="rez.review.content" required></textarea>
             <br/><br/>
     </main>
         <center>
             <div class="content">
-                <a ng-href="login.html" class="myButton">Wyślij !</a>
+                <a ng-click="rez.checkInput()" class="myButton">Wyślij !</a>
             </div>
         </center>
 
