fixed bugs with reservations

--- a/webapp/login.html
+++ b/webapp/login.html
@@ -48,6 +48,7 @@
     </div>
     <footer class="loginFooter"><br/>
         <p>Super salon usługowy</p>
+        <div class="employeeLogin"><a href="loginEmployee.html">Logowanie dla pracowników</a> </div>
     </footer>
 </body>
 </html>
