--- a/webapp/loginEmployee.html
+++ b/webapp/loginEmployee.html
@@ -12,18 +12,7 @@
 </head>
 <body ng-app="mainApp">
 <header>
-    <nav>
-        <ol>
-            <li><p><a href="index.html">Super salon usługowy </a></p></li>
-            <li><div class="button"><a href="serviceChoice.html">OFERTA </a></div></li>
-            <li><div class="button"><a href="employee.html">ZESPÓŁ </a></div></li>
-            <li><div class="button"><a href="info.html">O NAS </a></div></li>
-            <li><div class="button"><a href="reviewShowAll.html">OPINIE
-            </a></div></li>
-        </ol>
-        <a href="login.html"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
-        <div style="clear: both"> </div>
-    </nav>
+    <nav></nav>
 </header>
 <div ng-controller="loginCtrl as login">
     <p style="text-align: center; font-size: 1.7rem">{{login.errormsg}}</p>
