--- a/webapp/serviceChoice.html
+++ b/webapp/serviceChoice.html
@@ -41,7 +41,7 @@
                             <span>Koszt: {{s.price}} zł</span>
                         </div>
                     </div>
-                    <a ng-click="service.makeReservation(s.name)" class="myButton">Rezerwuj</a>
+                    <a ng-click="service.makeReservation(s.name, s.id)" class="myButton">Rezerwuj</a>
                 </th>
             </tr>
             </tbody>
