--- a/webapp/employeeReview.html
+++ b/webapp/employeeReview.html
@@ -15,12 +15,9 @@
 <header>
     <nav>
         <ol>
-            <li><p><a href="index.html">Super salon usługowy </a></p></li>
-            <li><div class="button"><a href="serviceChoice.html">OFERTA </a></div></li>
-            <li><div class="button"><a href="employee.html">ZESPÓŁ </a></div></li>
-            <li><div class="button"><a href="info.html">O NAS </a></div></li>
-            <li><div class="button"><a href="reviewShowAll.html">OPINIE
-            </a></div></li>
+            <li><p><a href="indexEmployee.html">Super salon usługowy </a></p></li>
+            <li><a class="employeeOptions" href="employeeProducts.html"><span class="optionsInfo">Stan magazynów</span></a></li>
+            <li><a class="employeeOptions" href="employeeReview.html"><span class="optionsInfo">Zobacz opinie</span></a></li>
         </ol>
         <a href="login.html" ng-if="getCookie('username').length < 2"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
         <a href="index.html" ng-if="getCookie('username').length > 1" ng-click="removeCookies()"><div class="userFrame"><span>Wyloguj Się</span><img src="img/logout.png" height="35px"></div></a>
