--- a/webapp/index.html
+++ b/webapp/index.html
@@ -71,7 +71,7 @@
                 <tbody>
                 <tr ng-repeat="r in rez.history | limitTo: 3">
                     <th>{{r.service.name}}</th>
-                    <th>{{r.review.content}}</th>
+                    <th style="max-width: 120px; overflow: hidden">{{r.review.content}}</th>
                     <th>{{r.workDate.employees[0].firstName + ' ' + r.workDate.employees[0].lastName}}</th>
                     <th><span ng-bind="r.workDate.date | date:'hh:mm dd.MM.yyyy'"> </span></th>
                 </tr>
