--- a/webapp/indexEmployee.html
+++ b/webapp/indexEmployee.html
@@ -6,72 +6,52 @@
     <script src="js/lib/angular/angular.js"></script>
     <script src="js/loginController.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/reservationsController.js"></script>
+    <script src="js/employeeReservationsController.js"></script>
     <script src="js/lib/angular-cookies/angular-cookies.js"></script>
     <script src="js/lib/angular-route/angular-route.js"></script>
     <title>Home</title>
 </head>
-<body ng-controller="reservationsController as rez">
+<body ng-controller="employeeReservationsController as rez">
 <header>
     <nav>
         <ol>
-            <li><p><a href="index.html">Super salon usługowy </a></p></li>
+            <li><p><a href="indexEmployee.html">Super salon usługowy </a></p></li>
             <li><a class="employeeOptions" href="employeeProducts.html"><span class="optionsInfo">Stan magazynów</span></a></li>
             <li><a class="employeeOptions" href="employeeReview.html"><span class="optionsInfo">Zobacz opinie</span></a></li>
         </ol>
-<!--        todo dokonczyc opinie-->
         <a href="login.html" ng-if="getCookie('username').length < 2"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
         <a href="index.html" ng-if="getCookie('username').length > 1" ng-click="removeCookies()"><div class="userFrame"><span>Wyloguj Się</span><img src="img/logout.png" height="35px"></div></a>
 
         <div style="clear: both"> </div>
     </nav>
 </header>
-<div class="userReservations" ng-if="rez.dataPresent == 1">
-    <center>
-        <h2> Twoje rezerwacje </h2>
-        <table>
-            <thead>
-            <tr>
-                <th>Nazwa usługi</th>
-                <th>Czas trwania</th>
-                <th>Cena</th>
-                <th>Data</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="r in rez.reservations" >
-                <th>{{r.service.name}}</th>
-                <th>{{r.service.duration}}</th>
-                <th>{{r.service.price}}</th>
-                <th><span ng-bind="r.workDate.date | date:'hh:mm dd.MM.yyyy'"> </span></th>
-            </tr>
-            </tbody>
-        </table>
-    </center>
-</div>
-<div class="userHistory" ng-if="rez.dataPresent == 1">
-    <center>
-        <h2> Historia twoich wizyt </h2>
-        <table>
-            <thead>
-            <tr>
-                <th>Nazwa usługi</th>
-                <th>Czas trwania</th>
-                <th>Cena</th>
-                <th>Data</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="r in rez.reservations" >
-                <th>{{r.service.name}}</th>
-                <th>{{r.service.duration}}</th>
-                <th>{{r.service.price}}</th>
-                <th><span ng-bind="r.workDate.date | date:'hh:mm dd.MM.yyyy'"> </span></th>
-            </tr>
-            </tbody>
-        </table>
-    </center>
-</div>
+<main>
+    <div class="userReservations" style="width: 100%" >
+        <center>
+            <h2> Twoje dzisiejsze rezerwacje </h2>
+            <table>
+                <thead>
+                <tr>
+                    <th>Nazwa usługi</th>
+                    <th>Czas trwania</th>
+                    <th>Cena</th>
+                    <th>Data</th>
+                    <th>Klient</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="r in rez.employee | filter:{r:'!'} track by $index" >
+                    <th>{{r.service.name}}</th>
+                    <th>{{r.service.duration}}</th>
+                    <th>{{r.service.price}}</th>
+                    <th><span ng-bind="r.workDate.date | date:'hh:mm dd.MM.yyyy'"> </span></th>
+                    <th>{{r.client.firstName + ' ' + r.client.lastName}}</th>
+                </tr>
+                </tbody>
+            </table>
+        </center>
+    </div>
+</main>
 <footer class="loginFooter"><br/>
     <p>Super salon usługowy</p>
 </footer>
