--- a/webapp/employee.html
+++ b/webapp/employee.html
@@ -50,7 +50,7 @@
     </main>
         <center>
             <div class="content">
-                <a ng-href="login.html" class="myButton">Powrót !</a>
+                <a href="index.html" class="myButton">Powrót !</a>
             </div>
         </center>
 
