--- a/webapp/history.html
+++ b/webapp/history.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <main class="employee" ng-controller="reservationsController as rez">
-        <div ng-if="rez.dataPresent == 1">
+        <div ng-if="rez.historyPresent == 1">
             <center>
                 <h2> Historia twoich wizyt </h2>
                 <table>
