--- a/webapp/index.html
+++ b/webapp/index.html
@@ -28,10 +28,11 @@
             <div style="clear: both"> </div>
         </nav>
     </header>
-    <main class="registerSucces" ng-if="rez.dataPresent == 0">
-        <span>Najlepszy salon usługowy</span>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.</p>
-            <br/><br/>
+    <main class="registerSucces" ng-if="rez.dataPresent == 0 && rez.historyPresent == 0" >
+
+                <span>Najlepszy salon usługowy</span>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.</p>
+                <br/><br/>
     </main>
     <div class="userReservations" ng-if="rez.dataPresent == 1">
         <center>
@@ -56,7 +57,7 @@
             </table>
         </center>
     </div>
-    <div class="userHistory" ng-if="rez.dataPresent == 1">
+    <div class="userHistory" ng-if="rez.historyPresent == 1">
         <center>
             <h2> Historia twoich wizyt </h2>
             <table>
