--- a/webapp/reviewShowAll.html
+++ b/webapp/reviewShowAll.html
@@ -55,7 +55,7 @@
     </main>
         <center>
             <div class="content">
-                <a ng-href="login.html" class="myButton">Powrót !</a>
+                <a href="index.html" class="myButton">Powrót !</a>
             </div>
         </center>
 
