--- a/webapp/employee.html
+++ b/webapp/employee.html
@@ -40,7 +40,7 @@
                  </tr>
             </thead>
              <tbody>
-                 <tr ng-repeat="p in employee.employees" >
+                 <tr ng-repeat="p in employee.employees | filter:{p:'!'} track by $index" >
                      <th>{{p.firstName}}</th>
                      <th>{{p.lastName}}</th>
                      <th><a ng-click="employee.saveEmployee(p.id)" class="myButton">Przeczytaj opinie<br/>o tym pracowniku</a></th>
@@ -56,6 +56,7 @@
 
     <footer><br/>
         <p>Super salon usługowy</p>
+        <div class="flaticon">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </footer>
 </body>
 </html>
