--- a/webapp/employeeReview.html
+++ b/webapp/employeeReview.html
@@ -68,12 +68,15 @@
 </main>
 <center>
     <div class="content">
-        <a href="index.html" class="myButton">Powrót !</a>
+        <a ng-if="getCookie('emp').length < 1" href="index.html" class="myButton">Powrót !</a>
+        <a ng-if="getCookie('emp').length >= 1" href="indexEmployee.html" class="myButton">Powrót !</a>
+
     </div>
 </center>
 
 <footer><br/>
     <p>Super salon usługowy</p>
+    <div class="flaticon">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 </footer>
 </body>
 </html>
