--- a/webapp/serviceChange.html
+++ b/webapp/serviceChange.html
@@ -52,6 +52,7 @@
     <div style="clear: both"></div>
     <footer class="loginFooter"><br/>
         <p>Super salon usługowy</p>
+        <div class="flaticon">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </footer>
 </body>
 </html>
