--- a/webapp/addEmployee.html
+++ b/webapp/addEmployee.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="css/Style.css" />
+    <link rel="stylesheet" type="text/css" href="css/bulma.css" />
     <script src="js/lib/angular/angular.js"></script>
     <script src="js/loginController.js"></script>
     <script src="js/app.js"></script>
@@ -11,23 +12,22 @@
     <script src="js/lib/angular-route/angular-route.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="js/lib/angular-sanitize/angular-sanitize.js"></script>
-
     <title>Change service</title>
 </head>
 <body ng-controller="adminController as admin">
-<header>
+<header class="nav">
     <nav>
-        <ol>
-            <li><p><a href="indexAdmin.html">Super salon usługowy </a></p></li>
-        </ol>
-        <a href="login.html" ng-if="getCookie('username').length < 2"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
-        <a href="index.html" ng-if="getCookie('username').length > 1" ng-click="removeCookies()"><div class="userFrame"><span>Wyloguj Się</span><img src="img/logout.png" height="35px"></div></a>
+        <p class="logoFrame"><a href="indexAdmin.html"><img src="/img/beaute_white.png" style="height: 40px"></a></p>
+        <a href="loginEmployee.html" ng-if="getCookie('username').length < 2"><div class="userFrame" style="margin-left: 65%"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
+
+        <a href="index.html" ng-if="getCookie('username').length > 1" ng-click="removeCookies()"><div class="userFrame" style="margin-left: 65%"><span>Wyloguj Się</span><img src="img/logout.png" height="35px"></div></a>
+
         <div style="clear: both"> </div>
     </nav>
 </header>
 <main class="serviceChange">
     <div class="employeeInput">
-        <p style="font-size: 1.8rem">Nowy Pracownik</p>
+        <p class="title is-2">Nowy Pracownik</p>
 
         <div class="middlePane">
             <span>Imię:</span><br/>
@@ -41,12 +41,29 @@
         </div>
 
 
-        <a ng-click="admin.save('employees')" class="myButton">Utwórz konto pracownika</a>
+        <a ng-click="admin.save('employees')" class="button is-info is-large">Utwórz konto pracownika</a>
 
-        <a href="indexAdmin.html" class="myButton">Wróć</a>
+        <a href="indexAdmin.html" class="button is-info is-large" style="margin-left: 10%">Wróć</a>
     </div>
 </main>
 <div style="clear: both"></div>
-<div ng-bind-html="Footer"></div>
+<footer class="footer">
+    <div class="employeeFooterAside">
+        <p><img class="logoTileEmployee" src="/img/beaute_white.png"></p>
+    </div>
+    <div class="employeeFooterAsideRight">
+        <span>Dzisiejsza data <span ng-bind="currentDate | date:'hh:mm dd-mm-yyyy'"> </span> </span>
+    </div>
+    <div></div>
+    <div></div>
+    <center><h3 class="copyRightEmployee">Copyright © Beauté </h3></center>
+    <p class="flaticon bottomFooter">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
+    <p>Bulma by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+
+    </p>
+</footer>
+
 </body>
 </html>
