--- a/webapp/employeeReview.html
+++ b/webapp/employeeReview.html
@@ -63,7 +63,7 @@
                         <th>{{r.review.title}}</th>
                         <th>{{r.review.content}}</th>
                         <th>{{r.client.firstName + ' ' + r.client.lastName}}</th>
-                        <th>{{r.workDate.date}}</th>
+                        <th><span ng-bind="r.workDate.date | date:'hh:mm dd-mm-yyyy'"> </span></th>
                     </tr>
                 </tbody>
             </table>
