--- a/webapp/index.html
+++ b/webapp/index.html
@@ -64,7 +64,7 @@
                         <th>{{r.service.duration}}</th>
                         <th>{{r.service.price}}</th>
                         <th><span ng-bind="r.workDate.date | date:'hh:mm dd.MM.yyyy'"></span></th>
-                        <th><a ng-click="rez.setService(r)">Modyfikuj</a></th>
+                        <th><a ng-click="rez.setService(r.id)">Modyfikuj</a></th>
                     </tr>
                 </tbody>
             </table>
