--- a/webapp/indexAdmin.html
+++ b/webapp/indexAdmin.html
@@ -12,38 +12,40 @@
     <script src="js/lib/angular-cookies/angular-cookies.js"></script>
     <script src="js/lib/angular-route/angular-route.js"></script>
     <script src="js/lib/angular-sanitize/angular-sanitize.js"></script>
-
     <title>Home</title>
 </head>
 <body ng-controller="adminController as admin">
 <header class="nav" ng-init="admin.getData()">
     <nav>
         <p class="logoFrame"><a href="indexAdmin.html"><img src="/img/beaute_white.png" style="height: 40px"></a></p>
-        <ol>
-            <li><a class="employeeOptions" href="adminEmployee.html"><span class="optionsInfo">Pracownicy</span></a></li>
-            <li><a class="employeeOptions" href="adminProducts.html"><span class="optionsInfo">Produkty</span></a></li>
-            <li><a class="employeeOptions" href="adminServices.html"><span class="optionsInfo">Usługi</span></a></li>
-            <li><a class="employeeOptions" href="adminReviews.html"><span class="optionsInfo">Opinie</span></a></li>
-        </ol>
-        <a href="loginEmployee.html" ng-if="getCookie('username').length < 2"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
+        <a href="loginEmployee.html" ng-if="getCookie('username').length < 2"><div class="userFrame" style="margin-left: 65%"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
 
-        <a href="index.html" ng-if="getCookie('username').length > 1" ng-click="removeCookies()"><div class="userFrame"><span>Wyloguj Się</span><img src="img/logout.png" height="35px"></div></a>
+        <a href="index.html" ng-if="getCookie('username').length > 1" ng-click="removeCookies()"><div class="userFrame" style="margin-left: 65%"><span>Wyloguj Się</span><img src="img/logout.png" height="35px"></div></a>
 
         <div style="clear: both"> </div>
     </nav>
 </header>
 <main>
     <div class="userReservations" style="width: 100%">
+        <section class="hero" style="margin-top: 0">
+            <div class="hero-body">
+                <div class="container">
+                    <h1 class="title is-1">
+                        Rezerwacje pracowników
+                    </h1>
+                </div>
+            </div>
+        </section>
         <center><canvas id="myChart"></canvas></center>
         <script>
             var ctx = document.getElementById('myChart').getContext('2d');
             var myChart = new Chart(ctx, {
                 type: 'bar',
                 data: {
-                    labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                    labels: ['Ricardo Milos', 'Krzysztof Kononowicz', 'Antonio Milos'],
                     datasets: [{
-                        label: '# of Votes',
-                        data: [12, 19, 3, 5, 2, 3],
+                        label: '# of Reservations',
+                        data: [12, 19, 3],
                         backgroundColor: [
                             'rgba(255, 99, 132, 0.2)',
                             'rgba(54, 162, 235, 0.2)',
@@ -74,10 +76,129 @@
                 }
             });
         </script>
+        <center>
+            <div class="adminBlock">
+                    <section class="hero">
+                        <div class="hero-body">
+                            <div class="container">
+                                <h2 class="title is-1">
+                                    Pracownicy
+                                </h2>
+                            </div>
+                        </div>
+                    </section>
+                    <table class="table is-bordered is-hoverable">
+                        <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Pracownik</th>
+                            <th>Login</th>
+                            <th>Usuń</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="e in admin.employee | filter:{e:'!'} track by $index" >
+                            <th>{{e.id}}</th>
+                            <th>{{e.firstName + ' ' + e.lastName}}</th>
+                            <th>{{e.login}}</th>
+                            <th class="adminLink" ng-click="admin.open('eid', e.id, 'Employee')"><center><img src="/img/clear-button.png"></center></th>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <a href="addEmployee.html" class="button is-info is-large">Dodaj Pracownika</a>
+                <section class="hero">
+                    <div class="hero-body">
+                        <div class="container">
+                            <h2 class="title is-1">
+                                Usługi
+                            </h2>
+                        </div>
+                    </div>
+                </section>
+                    <table class="table is-bordered is-hoverable">
+                        <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nazwa</th>
+                            <th>Czas</th>
+                            <th>Cena</th>
+                            <th>Modyfikuj</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="s in admin.service | filter:{s:'!'} track by $index" >
+                            <th>{{s.id}}</th>
+                            <th>{{s.name}}</th>
+                            <th>{{s.duration}}</th>
+                            <th>{{s.price}}</th>
+                            <th class="adminLink" ng-click="admin.open('sid', s.id, 'Service')"><center><img src="/img/configuration.png"></center></th>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <a href="modifyService.html" class="button is-info is-large">Dodaj Usługę</a>
+                <section class="hero">
+                    <div class="hero-body">
+                        <div class="container">
+                            <h2 class="title is-1">
+                                Produkty
+                            </h2>
+                        </div>
+                    </div>
+                </section>
+                <table class="table is-bordered is-hoverable">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nazwa</th>
+                        <th>Cena</th>
+                        <th>Ilość w magazynie</th>
+                        <th>Modyfikuj</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="p in admin.product | filter:{p:'!'} track by $index" >
+                        <th>{{p.type.id}}</th>
+                        <th>{{p.type.name}}</th>
+                        <th>{{p.type.price}}</th>
+                        <th>{{p.quantity}}</th>
+                        <th class="adminLink" ng-click="admin.open('pid', p.id, 'Product')"><center><img src="/img/configuration.png"></center></th>
+                    </tr>
+                    </tbody>
+                </table>
+                <a href="modifyProduct.html" class="button is-info is-large">Dodaj Produkt</a>
+                <section class="hero">
+                    <div class="hero-body">
+                        <div class="container">
+                            <h2 class="title is-1">
+                                Opinie
+                            </h2>
+                        </div>
+                    </div>
+                </section>
+                    <table class="table is-bordered is-hoverable">
+                        <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Tytuł</th>
+                            <th>Treść</th>
+                            <th>Data</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="r in admin.review | filter:{r:'!'} track by $index" >
+                            <th>{{r.id}}</th>
+                            <th>{{r.title}}</th>
+                            <th>{{r.content}}</th>
+                            <th><span ng-bind="r.date | date:'hh:mm'"> </span></th>
+                        </tr>
+                        </tbody>
+                    </table>
+            </div>
+        </center>
     </div>
 </main>
 <div style="clear: both;"></div>
-<footer class="footer" style="margin-top: 0!important;">
+<footer class="footer">
     <div class="employeeFooterAside">
         <p><img class="logoTileEmployee" src="/img/beaute_white.png"></p>
     </div>
@@ -91,6 +212,7 @@
     <p>Bulma by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
         <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
         is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+
     </p>
 </footer>
 </body>
