--- a/webapp/modifyReservation.html
+++ b/webapp/modifyReservation.html
@@ -3,58 +3,81 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="css/Style.css" />
+    <link rel="stylesheet" type="text/css" href="css/bulma.css" />
     <script src="js/lib/angular/angular.js"></script>
     <script src="js/loginController.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/workdatesController.js"></script>
+    <script src="js/reservationsController.js"></script>
     <script src="js/lib/angular-cookies/angular-cookies.js"></script>
     <script src="js/lib/angular-route/angular-route.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="js/lib/angular-sanitize/angular-sanitize.js"></script>
-
     <title>Change service</title>
 </head>
-<body ng-controller="loginCtrl">
-<header  ng-controller="workDatesInfo as date">
-    <nav>
-        <ol>
-            <li><p><a class="pLink" ng-click="date.removeService('index')">Super salon usługowy </a></p></li>
-            <li><div class="button"><a class="pLink" ng-click="date.removeService('serviceChoice')">OFERTA </a></div></li>
-            <li><div class="button"><a class="pLink" ng-click="date.removeService('employee')">ZESPÓŁ </a></div></li>
-            <li><div class="button"><a class="pLink" ng-click="date.removeService('info')">O NAS </a></div></li>
-            <li><div class="button"><a class="pLink" ng-click="date.removeService('reviewShowAll')">OPINIE
-            </a></div></li>
-        </ol>
-        <a href="login.html" ng-if="getCookie('username').length < 2"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
-        <a ng-click="date.logout()" ng-if="getCookie('username').length > 1"><div class="userFrame"><span>Wyloguj Się</span><img src="img/logout.png" height="35px"></div></a>
-        <div style="clear: both"> </div>
-    </nav>
-</header>
-<main class="serviceChange" ng-controller="workDatesInfo as date">
-    <center><p style="font-size: 1.8rem">Podsumowanie</p></center>
-    <div class="summary">
-        <p>Usługa: <span>{{date.serviceName}}</span></p>
-        <p>Termin: <span>{{date.date}}</span></p>
-<!--        todo wypisac liste dostepnych terminow-->
-        <a  class="myButton"> Wróć do terminów</a><br/><br/>
-        <p>Pracownik: <span>{{date.employeeFirstName + date.employeeLastName}}</span></p>
-<!--        todo wyswietlic liste pracownikow w tym terminie-->
-        <a class="myButton"> Zmień pracownika</a><br/><br/><br/>
+<body ng-controller="reservationsController as reservation" >
+<header class="nav">
+        <nav>
+            <p class="logoFrame"><a href="index.html"><img src="/img/beaute_white.png" style="height: 40px"></a></p>
+            <ol>
+                <li><div class="nav-button"><a href="serviceChoice.html">OFERTA </a></div></li>
+                <li><div class="nav-button"><a href="employee.html">ZESPÓŁ </a></div></li>
+                <li><div class="nav-button"><a href="info.html">O NAS </a></div></li>
+                <li><div class="nav-button"><a href="reviewShowAll.html">OPINIE</a></div></li>
+                <li><div class="nav-button"><a href="contact.html">KONTAKT</a></div></li>
+            </ol>
+            <a href="login.html" ng-if="getCookie('username').length < 2"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
 
-        </p>
+            <a href="index.html" ng-if="getCookie('username').length > 1" ng-click="removeCookies()"><div class="userFrame"><span>Wyloguj Się</span><img src="img/logout.png" height="35px"></div></a>
+
+            <div style="clear: both"> </div>
+        </nav>
+    </header>
+<main class="serviceChange" ng-init="reservation.getServiceToModyfication()">
+    <div class="summary">
+        <p class="title is-2">Rezerwacja</p>
+        <p>Usługa: <span>{{reservation.reservationToModify.service.name}}</span></p>
+        <p>Termin: <span ng-bind="reservation.reservationToModify.workDate.date | date:'hh:mm dd.MM.yyyy'"> </span></p>
+        <p>Pracownik: <span>{{reservation.reservationToModify.workDate.employees[0].firstName +' ' + reservation.reservationToModify.workDate.employees[0].lastName}}</span></p><br/><br/>
+
+        <a ng-click="reservation.deleteService(reservation.reservationToModify)" class="button is-info is-large" style="margin-left: 5%"> Usuń</a>
+        <a href="index.html" class="button is-info is-large" style="margin-left: 5%"> Wróć</a>
     </div>
     <div class="summaryInput">
-        <span>Anuluj rezerwację :</span><br/><!--        todo dodac usuwanie-->
-        <a class="myButton"> Usuń</a><br/><br/>
-        <span>Zostaw bez zmian :</span><br/>
-        <a ng-click="date.removeService('index')" class="myButton"> Wróć</a><br/><br/>
+        <h2>Zmień termin </h2>
+        <center>
+            <table class="table is-bordered is-hoverable">
+                <thead>
+                <tr>
+                    <th>Dzień</th>
+                    <th style="width: 120px">Godziny</th>
+                    <th>Pracownicy</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="d in reservation.newDate | limitTo: 8">
+                    <td><p ng-bind="d.date | date:'MM/dd/yyyy'"> </p></td>
+                    <td><span ng-bind="d.date | date:'hh:mm'"> </span> - <span ng-bind="d.date + 1800000 | date:'hh:mm'"> </span></td>
+                    <td>
+                        <table style="border: 0;">
+                            <tbody>
+                            <tr ng-repeat="e in d.employees">
+                                <th style="font-weight: normal">{{e.firstName + ' ' + e.lastName}}</th>
+                                <th><a ng-click="reservation.changeReservationDate(reservation.reservationToModify, d.id)" class="button is-info is-medium">Wybierz datę</a></th>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </center>
     </div>
     <div style="clear: both"></div>
 </main>
+    <div style="clear: both"></div>
+</main>
 <div style="clear: both"></div>
-<footer class="loginFooter"><br/>
-    <p>Super salon usługowy</p>
-    <div class="flaticon">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-</footer>
+<div ng-bind-html="Footer">
+</div>
 </body>
 </html>
