--- a/webapp/modifyService.html
+++ b/webapp/modifyService.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="css/Style.css" />
+    <link rel="stylesheet" type="text/css" href="css/bulma.css" />
     <script src="js/lib/angular/angular.js"></script>
     <script src="js/loginController.js"></script>
     <script src="js/app.js"></script>
@@ -18,35 +19,86 @@
 <header>
     <div ng-if="getCookie('sid').length >= 1" ng-init="admin.getSingleItem('services', 'sid')"></div>
     <nav>
-        <ol>
-            <li><p><a href="indexAdmin.html">Super salon usługowy </a></p></li>
-        </ol>
-        <a href="login.html" ng-if="getCookie('username').length < 2"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
-        <a href="index.html" ng-if="getCookie('username').length > 1" ng-click="removeCookies()"><div class="userFrame"><span>Wyloguj Się</span><img src="img/logout.png" height="35px"></div></a>
+        <p class="logoFrame"><a href="indexAdmin.html"><img src="/img/beaute_white.png" style="height: 40px"></a></p>
+        <a href="loginEmployee.html" ng-if="getCookie('username').length < 2"><div class="userFrame" style="margin-left: 65%"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
+
+        <a href="index.html" ng-if="getCookie('username').length > 1" ng-click="removeCookies()"><div class="userFrame" style="margin-left: 65%"><span>Wyloguj Się</span><img src="img/logout.png" height="35px"></div></a>
+
         <div style="clear: both"> </div>
     </nav>
 </header>
-<main class="serviceChange">
-    <div class="summary" style="width: 95%; margin: auto;">
-        <p style="font-size: 1.8rem" ng-if="admin.singleItem.id">Modyfikacja usługi</p>
-        <p style="font-size: 1.8rem" ng-if="!admin.singleItem.id">Nowa usługa</p>
+<main class="serviceChange" style="width: 50%; float:left; margin-left: 5%">
+        <div class="summary" style="width: 95%; margin: auto;">
+            <p class="title is-1" ng-if="admin.singleItem.id">Modyfikacja usługi</p>
+            <p class="title is-1" ng-if="!admin.singleItem.id">Nowa usługa</p>
 
-        <p ng-if="admin.singleItem.id">Id: <span>{{admin.singleItem.id}}</span></p>
-        <p>Nazwa usługi: <input type="text" value="{{admin.singleItem.name}}" ng-model="admin.singleItem.name"></p>
-        <p>Cena: <input type="text" value="{{admin.singleItem.price}}" ng-model="admin.singleItem.price"></p>
-        <p>Czas trwania(w minutach): <input type="text" value="{{admin.singleItem.duration}}" ng-model="admin.singleItem.duration"></p><br/>
+            <p ng-if="admin.singleItem.id">Id: <span>{{admin.singleItem.id}}</span></p>
+            <p>Nazwa usługi: <input class="input modifyProduct" type="text" value="{{admin.singleItem.name}}" ng-model="admin.singleItem.name"></p>
+            <p>Cena: <input class="input modifyProduct" type="text" value="{{admin.singleItem.price}}" ng-model="admin.singleItem.price"></p>
+            <p>Czas trwania(w minutach): <input class="input modifyProduct" type="text" value="{{admin.singleItem.duration}}" ng-model="admin.singleItem.duration"></p><br/>
 
-        <a ng-if="!admin.singleItem.id" ng-click="admin.setNeed()" class="myButton">Utwórz</a>
-        <a ng-if="admin.singleItem.id" ng-click="admin.update('services')" class="myButton">Zatwierdź</a>
+            <a ng-if="!admin.singleItem.id" ng-click="admin.setNeed()" class="button is-info is-large">Utwórz</a>
+            <a ng-if="admin.singleItem.id" ng-click="admin.update('services')" class="button is-info is-large">Zatwierdź</a>
 
-        <a href="indexAdmin.html" class="myButton">Wróć</a>
-
-    </div>
+            <a href="indexAdmin.html" class="button is-info is-large" style="margin-left: 10%">Wróć</a>
+        </div>
 </main>
+<div class="serviceProducts" ng-if="admin.singleItem.id">
+    <h1>Obeceni uzywane produkty</h1>
+    <table class="table is-bordered is-hoverable">
+        <thead>
+        <tr>
+            <th>Nazwa</th>
+            <th>Cena</th>
+            <th>Ilość w magazynie</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="p in admin.singleItem.products" >
+            <th>{{p.type.name}}</th>
+            <th>{{p.type.price}}</th>
+            <th>{{p.quantity}}</th>
+        </tr>
+        </tbody>
+    </table>
+    <h1 ng-init="admin.getProduct()">Dodaj Produkty</h1>
+    <table class="table is-bordered is-hoverable">
+        <thead>
+        <tr>
+            <th>Nazwa</th>
+            <th>Cena</th>
+            <th>Ilość w magazynie</th>
+            <th>Dodaj</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="p in admin.products" >
+            <th>{{p.type.name}}}</th>
+            <th>{{p.type.price}}</th>
+            <th>{{p.quantity}}</th>
+            <th><a ng-click="admin.addProduct(p)"><span style="font-weight: 900">+</span></a></th>
+        </tr>
+        </tbody>
+    </table>
+
+</div>
 <div style="clear: both"></div>
-<footer class="loginFooter"><br/>
-    <p>Super salon usługowy</p>
-    <div class="flaticon">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+<footer class="footer">
+    <div class="employeeFooterAside">
+        <p><img class="logoTileEmployee" src="/img/beaute_white.png"></p>
+    </div>
+    <div class="employeeFooterAsideRight">
+        <span>Dzisiejsza data <span ng-bind="currentDate | date:'hh:mm dd-mm-yyyy'"> </span> </span>
+    </div>
+    <div></div>
+    <div></div>
+    <center><h3 class="copyRightEmployee">Copyright © Beauté </h3></center>
+    <p class="flaticon bottomFooter">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
+    <p>Bulma by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+
+    </p>
 </footer>
 </body>
 </html>
