--- a/webapp/serviceChoice.html
+++ b/webapp/serviceChoice.html
@@ -31,7 +31,7 @@
         <div style="clear: both"> </div>
     </nav>
 </header>
-    <main class="services" ng-controller="servicesController as service">
+    <main class="services" ng-controller="servicesController as service" style="overflow:auto;">
         <center><h2 class="errorText" ng-if="getCookie('username').length < 2" style="color: red">Zaloguj się aby kontynuować !</h2></center>
         <table>
             <tbody>
