--- a/webapp/modifyProduct.html
+++ b/webapp/modifyProduct.html
@@ -33,8 +33,8 @@
         <p class="title is-1" ng-if="!admin.singleItem.id">Nowy produkt</p>
 
         <p ng-if="admin.singleItem.id">Id: <span>{{admin.singleItem.id}}</span></p>
-        <p>Nazwa usługi: <input class="input modifyProduct" type="text" value="{{admin.singleItem.type.name}}" ng-model="admin.singleItem.type.name"></p>
-        <p>Cena: <input class="input modifyProduct" type="text" value="{{admin.singleItem.type.price}}" ng-model="admin.singleItem.type.price"></p>
+        <p>Nazwa Produktu: <input class="input modifyProduct" type="text" value="{{admin.singleItem.type.name}}" ng-model="admin.singleItem.type.name"></p>
+        <p>Cena(zł): <input class="input modifyProduct" type="text" value="{{admin.singleItem.type.price}}" ng-model="admin.singleItem.type.price"></p>
         <p>Ilość w magazynie: <input class="input modifyProduct" type="text" value="{{admin.singleItem.quantity}}" ng-model="admin.singleItem.quantity"></p><br/>
 
 
