--- a/webapp/serviceChoice.html
+++ b/webapp/serviceChoice.html
@@ -50,7 +50,7 @@
                                 <p class="title is-6">Cena: {{s.price}}zł</p>
                             </div>
                         </div>
-                        <center style="padding: 10px 10px 10px 10px"><a ng-click="service.makeReservation(s.id)" class="button is-info is-large">Rezerwuj</a></center>
+                        <center style="padding: 10px 10px 10px 10px"><a ng-click="service.makeReservation(s.id, s.name)" class="button is-info is-large">Rezerwuj</a></center>
                     </div>
 
                 </th>
